Implemented #18865: Faster cache clearing w/ eZDFS
Separated cache and storage into two DFS tables.
The one for storage isn't changed, while the one for cache
can be customized via constants / INI settings

--- a/settings/file.ini
+++ b/settings/file.ini
@@ -84,6 +84,9 @@ DBExecuteRetries=20
 # Increase this value if you find files like expiryXYZtmp.php with 0 byte size
 MaxCopyRetries=5
 
+# Optional
+#MetaDataTableNameCache=
+
 [PassThroughSettings]
 # The default value for mime types not specified using ContentDisposition
 # is "attachment". Possible values are attachment or inline.
