Allow loading of db schema handlers php classes with autoloading; add warning message when users load dbschema handler class without using php autoloading

--- a/settings/dbschema.ini
+++ b/settings/dbschema.ini
@@ -10,10 +10,10 @@
 #       and can be used for this purpose).
 
 [SchemaSettings]
+# DEPRECATED
+# we now rely on class autoloading for db schema handlers, this is kept for compatibility
+# and will be removed in the future
 SchemaPaths[]
-SchemaPaths[mysql]=lib/ezdbschema/classes/ezmysqlschema.php
-SchemaPaths[mysqli]=lib/ezdbschema/classes/ezmysqlschema.php
-SchemaPaths[postgresql]=lib/ezdbschema/classes/ezpgsqlschema.php
 
 SchemaHandlerClasses[]
 SchemaHandlerClasses[mysql]=eZMysqlSchema
