Fixed EZP-20052/EZSA-2013-002: Website spoofing attack possible on user/login (and other urls as well)
http://share.ez.no/community-project/security-advisories/ezsa-2013-002-website-spoofing-attack-possible-on-user-login-and-other-urls-as-well

Signed-off-by: André R <ar@ez.no>

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -442,6 +442,11 @@ HTTPAUTHServerVariable=Authorization
 # support this feature.
 AdditionalLoginFormActionURL=
 
+# Array of allowed hosts for redirects with full URL from eZ Publish modules.
+# Note: Current host and configured hosts (HostMatchMapItems/HostUriMatchMapItems) are always considered trusted
+AllowedRedirectHosts[]
+# AllowedRedirectHosts[]=www.sometrustedhost.com
+
 # Settings for the search engine framework in eZ Publish
 [SearchSettings]
 SearchEngine=eZSearchEngine
