Fixed EZP-196171 - DFS cluster: expiryXYZtmp.php with 0 byte size

--- a/settings/file.ini
+++ b/settings/file.ini
@@ -103,6 +103,9 @@ DBUser=root
 DBPassword=
 DBConnectRetries=3
 DBExecuteRetries=20
+# Max number of times a dfs file is tried to be copied.
+# Increase this value if you find files like expiryXYZtmp.php with 0 byte size
+MaxCopyRetries=5
 
 [PassThroughSettings]
 # The default value for mime types not specified using ContentDisposition
