Fix EZP-20371: Layout.ini - missing documentation - Added examples.

--- a/settings/layout.ini
+++ b/settings/layout.ini
@@ -15,7 +15,9 @@
 #                   example: ContentType=text/xml
 # - PageLayout    - Sets the pagelayout to use for a specific layout.
 # - UseAccessPass - Include or exclude the layout path in links.
+#                   example : UseAccessPass=false
 # - UseFullUrl    - Turns usage of full urls on links ON or OFF.
+#                   example : UseFullUrl=true
 
 [fullscreen]
 PageLayout=fullscreen_pagelayout.tpl
