--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name":        "ezsystems/ezpublish-legacy",
     "description": "eZ Publish LegacyStack (4.x)",
-    "version":     "5.1-dev",
+    "version":     "2013.04.0",
     "homepage": "http://share.ez.no",
     "licence": "GPL-2.0",
     "require": {
