Implemented EZP-20803: It should be possible to disable(/enable) the automatic user login after account activation

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -581,6 +581,8 @@ RequireConfirmEmail=false
 # Controls whether special characters are allowed in passwords in additional to
 # characters in the range a-z, A-Z and 0-9.
 UseSpecialCharacters=false
+# Controls whether user activation automatically logs in the user
+AutoLoginAfterActivation=enabled
 
 # Custom validation of user login name
 # Will only affect new users, and existing users when they edit their credentials
