Changed: travis tests configuration
- Additional timezones
- Additional versions of PHP
- Using exlcude to decrease the number of tests run

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: php
 
 php:
   - 5.3.3
+  - 5.3
   - 5.4
+  - 5.5
 
 branches:
   only:
@@ -12,8 +14,20 @@ env:
   global:
     - DB_NAME="testdb"
   matrix:
-    - DB="mysql" DB_USER="root"
+    - DB="mysql" DB_USER="root" TIMEZONE="Asia/Calcutta"
+    - DB="mysql" DB_USER="root" TIMEZONE="America/New_York"
 #    - DB="postgresql" DB_USER="postgres"
+
+matrix:
+  allow_failures:
+    - php: 5.5
+  exclude:
+    - php: 5.3
+      env: DB="mysql" DB_USER="root" TIMEZONE="America/New_York"
+    - php: 5.4
+      env: DB="mysql" DB_USER="root" TIMEZONE="Asia/Calcutta"
+    - php: 5.5
+      env: DB="mysql" DB_USER="root" TIMEZONE="America/New_York"
 
 before_script:
  - if [ $DB == "mysql" ]; then mysql -e "create database IF NOT EXISTS $DB_NAME;" -u$DB_USER ; fi
@@ -23,7 +37,7 @@ before_script:
  - php bin/php/ezpgenerateautoloads.php -s -e
 
 script:
-  - php tests/runtests.php --dsn "$DB://${DB_USER}@127.0.0.1/$DB_NAME"
+  - php -d date.timezone=$TIMEZONE tests/runtests.php --dsn "$DB://${DB_USER}@127.0.0.1/$DB_NAME"
 
 notification:
   email: false
