Change admin LeftMenu so links are by default disabled in browse ui_context

--- a/settings/menu.ini
+++ b/settings/menu.ini
@@ -271,7 +271,7 @@ Shown[browse]=true
 # Menu item is disabled (no link) if this returns false
 #PolicyList_<Links_index>[]=<value>
 # Enabled sets if menuitem is clickable in current ui_context or value 'default'
-# By default 'default' is considered true and 'edit' is false
+# By default 'default' is considered true and 'edit' + 'browse' is false
 #Enabled_<Links_index>[browse]=false
 
 
