Implemented EZP-20851: Setup Travis tests to also test prostgres for ezpublish-kernel/legacy

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
   matrix:
     - DB="mysql" DB_USER="root" TIMEZONE="Asia/Calcutta"
     - DB="mysql" DB_USER="root" TIMEZONE="America/New_York"
-#    - DB="postgresql" DB_USER="postgres"
+    - DB="postgresql" DB_USER="postgres" TIMEZONE="Asia/Calcutta"
 
 matrix:
   allow_failures:
@@ -26,12 +26,14 @@ matrix:
       env: DB="mysql" DB_USER="root" TIMEZONE="America/New_York"
     - php: 5.4
       env: DB="mysql" DB_USER="root" TIMEZONE="Asia/Calcutta"
+    - php: 5.4
+      env: DB="postgres" DB_USER="postgres" TIMEZONE="Asia/Calcutta"
     - php: 5.5
       env: DB="mysql" DB_USER="root" TIMEZONE="America/New_York"
 
 before_script:
- - if [ $DB == "mysql" ]; then mysql -e "create database IF NOT EXISTS $DB_NAME;" -u$DB_USER ; fi
- - if [ $DB == "postgresql" ]; then psql -c "create database $DB_NAME;" -U $DB_USER ; fi
+ - if [ $DB == "mysql" ]; then mysql -e "CREATE DATABASE IF NOT EXISTS $DB_NAME;" -u$DB_USER ; fi
+ - if [ $DB == "postgresql" ]; then psql -c "CREATE DATABASE $DB_NAME;" -U $DB_USER ; psql -c "CREATE EXTENSION pgcrypto;" -U $DB_USER $DB_NAME ; fi
  - pear channel-discover components.ez.no
  - pear install -a ezc/eZComponents
  - php bin/php/ezpgenerateautoloads.php -s -e
