Implemented EZP-20883: Prevent image alias cache regeneration

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -43,6 +43,9 @@ CacheItems[]
 CacheItems[]=rest
 CacheItems[]=restRoutes
 
+# Array with cache id's to be excluded from being cleared upon eZCache::clearAll request (EZP-20883)
+ExcludeIdFromClearAll[]
+
 [Cache_rest]
 name=REST Application cache
 id=rest
