--- a/settings/site.ini
+++ b/settings/site.ini
@@ -1055,6 +1055,12 @@ DelayedCacheBlockCleanup=disabled
 # Controls whether compiled templates should be stored gzip compressed on disk.
 # This drastically reduces disk usage.
 TemplateCompression=disabled
+# Controls whether file existency should be checked or not on tpl file when checking
+# if compiled template cache is valid
+TemplateCheckExists=enabled
+# Controls whether modified time should be checked or not on tpl file when checking
+# if compiled template cache is valid
+TemplateCheckMTime=enabled
 # Controls if development is enabled or not.
 # When enabled the system will perform more checks like modification time on
 # compiled vs source file and will reduce need for clearing template compiled
