EZP-20905: remove preg_match

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -1055,11 +1055,9 @@ DelayedCacheBlockCleanup=disabled
 # Controls whether compiled templates should be stored gzip compressed on disk.
 # This drastically reduces disk usage.
 TemplateCompression=disabled
-# Controls whether file existency should be checked or not on tpl file when checking
-# if compiled template cache is valid
+# Controls whether template file existence should be checked or not
 TemplateCheckExists=enabled
-# Controls whether modified time should be checked or not on tpl file when checking
-# if compiled template cache is valid
+# Controls whether template file mtime should be checked ot not
 TemplateCheckMTime=enabled
 # Controls if development is enabled or not.
 # When enabled the system will perform more checks like modification time on
