--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,16 @@
     "name":        "ezsystems/ezpublish-legacy",
     "description": "eZ Publish LegacyStack (4.x)",
     "version":     "5.2-dev",
-    "homepage": "http://share.ez.no",
-    "license": "GPL-2.0",
+    "homepage":    "http://share.ez.no",
+    "license":     "GPL-2.0",
+    "type":        "ezpublish-legacy",
     "require": {
-        "php": ">=5.3.3"
+        "php": ">=5.3.3",
+        "ezsystems/ezpublish-legacy-installer": "*"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "5.1.x-dev"
+            "dev-master": "5.2.x-dev"
         }
     }
 }
