EZP-21146 : remove useless include/require

--- a/settings/dbschema.ini
+++ b/settings/dbschema.ini
@@ -10,6 +10,7 @@
 #       and can be used for this purpose).
 
 [SchemaSettings]
+# DEPRECATED : php autoload does it so well
 SchemaPaths[]
 SchemaPaths[mysql]=lib/ezdbschema/classes/ezmysqlschema.php
 SchemaPaths[mysqli]=lib/ezdbschema/classes/ezmysqlschema.php
