--- a/settings/site.ini
+++ b/settings/site.ini
@@ -478,6 +478,7 @@ StopWordThresholdPercent=60
 DelayedIndexing=disabled
 # List of class identifiers to use delayed indexing with.
 DelayedIndexingClassList[]
+# DEPRECATED : php autoload does it so well
 # Search extension path list. Add extension name where the search plug-in is
 # located to this list.
 ExtensionDirectories[]
