--- a/settings/file.ini
+++ b/settings/file.ini
@@ -84,7 +84,10 @@ DBExecuteRetries=20
 # Increase this value if you find files like expiryXYZtmp.php with 0 byte size
 MaxCopyRetries=5
 
-# Optional
+# Optional, use a dedicated name for the cache entries meta data table
+# this is useful for staging use cases where the storage entries and DB are shared
+# across different eZ Publish installations, but the caches should not (in casu
+# template changes are per installation)
 #MetaDataTableNameCache=
 
 [PassThroughSettings]
