Fix EZP-21190: installer fails at package validation using PHP 5.5

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,6 @@ env:
     - DB="postgresql" DB_USER="postgres" TIMEZONE="Asia/Calcutta"
 
 matrix:
-  allow_failures:
-    - php: 5.5
   exclude:
     - php: 5.3
       env: DB="mysql" DB_USER="root" TIMEZONE="America/New_York"
@@ -34,9 +32,9 @@ matrix:
 before_script:
  - if [ $DB == "mysql" ]; then mysql -e "CREATE DATABASE IF NOT EXISTS $DB_NAME;" -u$DB_USER ; fi
  - if [ $DB == "postgresql" ]; then psql -c "CREATE DATABASE $DB_NAME;" -U $DB_USER ; psql -c "CREATE EXTENSION pgcrypto;" -U $DB_USER $DB_NAME ; fi
- - pear channel-discover components.ez.no
- - pear install -a ezc/eZComponents
  - php bin/php/ezpgenerateautoloads.php -s -e
+ - cp config.php-TRAVIS config.php
+ - composer install --prefer-source
 
 script:
   - php -d date.timezone=$TIMEZONE tests/runtests.php --dsn "$DB://${DB_USER}@127.0.0.1/$DB_NAME"
