--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,32 @@
     "homepage":    "http://share.ez.no",
     "license":     "GPL-2.0",
     "type":        "ezpublish-legacy",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/lolautruche/Archive.git"
+        }
+    ],
     "require": {
         "php": ">=5.3.3",
-        "ezsystems/ezpublish-legacy-installer": "*"
+        "ezsystems/ezpublish-legacy-installer": "*",
+        "zetacomponents/archive": "dev-fixUnpackPHP55",
+        "zetacomponents/authentication": "@dev",
+        "zetacomponents/authentication-database-tiein": "@dev",
+        "zetacomponents/cache": "@dev",
+        "zetacomponents/configuration": "@dev",
+        "zetacomponents/console-tools": "@dev",
+        "zetacomponents/database": "@dev",
+        "zetacomponents/debug": "@dev",
+        "zetacomponents/feed": "@dev",
+        "zetacomponents/image-conversion": "@dev",
+        "zetacomponents/mail": "@dev",
+        "zetacomponents/mvc-tools": "@dev",
+        "zetacomponents/mvc-authentication-tiein": "@dev",
+        "zetacomponents/persistent-object": "@dev",
+        "zetacomponents/php-generator": "@dev",
+        "zetacomponents/signal-slot": "@dev",
+        "zetacomponents/system-information": "@dev"
     },
     "extra": {
         "branch-alias": {
