--- a/settings/site.ini
+++ b/settings/site.ini
@@ -1036,6 +1036,8 @@ TemplateCompile=enabled
 ShareCompiledTemplates=disabled
 # Where to store shared compiled templates
 SharedCompiledTemplatesDir=
+# Name of the default compiled template directory
+DefaultCompiledTemplatesDir=template/compiled
 # Controls whether further optimizations should be performed on compiled
 # templates
 TemplateOptimization=enabled
