EZP-21337 - Send HTTP status 401 (Authorization required) when user lacks access to content

--- a/settings/error.ini
+++ b/settings/error.ini
@@ -77,6 +77,7 @@ EmbedURL[1]=/user/login
 # Example:
 # Add 404 for module not found error
 # HTTPError[20]=404
+HTTPError[1]=401
 HTTPError[2]=404
 HTTPError[3]=404
 # 301 = moved permanently
@@ -108,3 +109,8 @@ HTTPName=Not Found
 # URL moved permanently
 [HTTPError-301]
 HTTPName=Moved Permanently
+
+# Definition of the HTTP error code 401
+# Authorization Required
+[HTTPError-401]
+HTTPName=Authorization Required
