Adding code+settings for changing redirection after publish (re-merge PR from julfabre to current master : https://github.com/ezsystems/ezpublish-legacy/pull/340 )

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -1177,6 +1177,15 @@ ContentObjectNameLimitSequence=...
 DatatypeBlackListForExternal[]
 DatatypeBlackListForExternal[]=ezuser
 
+# Use this setting to change the redirection after publish node.
+RedirectAfterPublish=parentNode
+#RedirectAfterPublish=node
+#RedirectAfterPublish=mainNode
+#RedirectAfterPublish=rootNode
+#RedirectAfterPublish=uri
+
+#RedirectAfterPublishUri=
+
 [MailSettings]
 # The type of transport for emails, can be either: sendmail, SMTP or file
 # Window users should probably use SMTP
