Add dynamic translation template feature
Changes global setting for ezi18n template operator
for the default setting of 'dynamic' parameter
When enabled these calls are not compiled as translated values into
templates, but read dynamically

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -943,6 +943,14 @@ LanguageSwitcherClass=ezpLanguageSwitcher
 # LanguageSA[nor-NB]=site1_nor
 # LanguageSA[fre-FR]=site1_fre
 
+# Dynamic translation template operator
+# Changes global setting for ezi18n template operator
+# for the default setting of 'dynamic' parameter
+# When enabled these calls are not compiled as translated values into
+# templates, but read dynamically
+# Note: only read during template compilation
+DynamicTemplateMode=disabled
+
 
 [UnitSettings]
 # List of units which acts as binary measures
