EZP-21390 : implements multiple methods to create cache content subtree

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -1109,6 +1109,9 @@ CompileIncludeNodeTree[]
 SurplusNode=3
 # Where to place view cache files, it's a subdir of the global cache dir.
 CacheDir=content
+# Algorithm to create directories in cache content directory
+# supported methods are : default, reverse, 2by2, reverse_2by2
+FilenamePathAlgorithm=default
 # Whether to use view caching or not
 ViewCaching=enabled
 # A list of viewmodes which will be cached
