Add a developper, i would like to create new language from an extension

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -908,6 +908,9 @@ HTTPLocale=
 # special locale meaning 7-bit ASCII). Examples for this setting include
 # "german", "de_DE.ISO-8859-1"; depending on your operating system.
 SystemLocale=
+LocaleRepository=share/locale/
+LocaleExtensions[]
+
 # The default language for content objects
 # Note: Changing this can have catastrophic consequences
 #       since there might not be any content objects with
