As a developer, i would like to create a new language from an extension

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -880,6 +880,8 @@ OverrideSiteDesign=standard
 Locale=eng-GB
 # Set this if the http locale in the locale is wrong
 HTTPLocale=
+LocaleRepository=share/locale/
+LocaleExtensions[]
 # Set this if you want to run the entire PHP system in a given
 # locale, this means that PHP will be locale aware when dealing
 # with strings (e.g making characters in a string into lowercase). (C is a
