EZP-18865: CS, optimizatin and review fixes
- added ezdfsfile_cache table to schema file
- reworked dfsmysqli gateway parameters (no INI loading)
- added missing config.php constants with documentation
- sanitized usage of arguments in mysql.php
- removed include_once in gateway
- removed unused $table properties in gateway
- removed the TABLE_METADATA constant

--- a/settings/file.ini
+++ b/settings/file.ini
@@ -84,11 +84,10 @@ DBExecuteRetries=20
 # Increase this value if you find files like expiryXYZtmp.php with 0 byte size
 MaxCopyRetries=5
 
-# Optional, use a dedicated name for the cache entries meta data table
-# this is useful for staging use cases where the storage entries and DB are shared
-# across different eZ Publish installations, but the caches should not (in casu
-# template changes are per installation)
-#MetaDataTableNameCache=
+# Optional DB table name caches should be stored to
+# This is useful for staging use cases where the storage entries and DB are shared
+# across different eZ Publish installations, but the caches should not.
+# MetaDataTableNameCache=
 
 [PassThroughSettings]
 # The default value for mime types not specified using ContentDisposition
