EZP-20905 : fix word issue

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -1057,7 +1057,7 @@ DelayedCacheBlockCleanup=disabled
 TemplateCompression=disabled
 # Controls whether template file existence should be checked or not
 TemplateCheckExists=enabled
-# Controls whether template file mtime should be checked ot not
+# Controls whether template file mtime should be checked or not
 TemplateCheckMTime=enabled
 # Controls if development is enabled or not.
 # When enabled the system will perform more checks like modification time on
