EZP-21619: Updated INI doc for redirectAfterPublish feature

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -1184,9 +1184,8 @@ DatatypeBlackListForExternal[]=ezuser
 
 # Use this setting to change the redirection after publishing a node.
 # It can contain the following values:
-# - parentNode - redirect to the parent of the edited node (default value)
-# - node       - redirect to the current edited node
-# - mainNode   - redirect to the main node of the current edited node (if multipositoned object)
+# - parentNode - redirect to the parent of the edited object's main node (default value)
+# - node       - redirect to the edited object's main node
 # - rootNode   - redirect to siteaccess root node (ie. content.ini/NodeSettings/rootNode )
 # - uri        - redirect to a specific URI (see RedirectAfterPublishUri settings below)
 RedirectAfterPublish=parentNode
