--- a/settings/file.ini
+++ b/settings/file.ini
@@ -20,6 +20,12 @@ Handler=eZFilePassthroughHandler
 #ExtensionRepositories[]
 
 [FileSettings]
+# (UNIX only) Whether to check if the user executing an eZScript is the same
+# as defined in the SystemUser setting. When the users don't match, the
+# script execution will be stopped.
+SystemUserCheck=disabled
+RequiredSystemUser=www-data
+
 Handlers[]
 # Generic gzip handler, uses the zlib or shell handlers to do the job
 Handlers[gzip]=ezgzipcompressionhandler
