Fix [EZP-22328] Inline doc in logfile.ini can lead to error in updateviewcount script

--- a/settings/logfile.ini
+++ b/settings/logfile.ini
@@ -3,7 +3,8 @@
 #
 
 [AccessLogFileSettings]
-# Storage of the log file, for example /var/log/httpd/
+# Storage of the log file, for example /var/log/httpd
+# Do not add trailing slash
 StorageDir=
 # The name of log file, for example mytest.log
 LogFileName=
