Ignoring siteaccess cache and log sub-directories
needed if the siteaccess is not suffixed by "_site"

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,10 @@ settings/siteaccess/*
 lib/ezc/
 var/autoload/
 var/cache/
+var/*/cache/
 var/*_site/
 var/log/
+var/*/log/
 var/storage/
 var/dfsmount/
 var/test*
