Fix [EZP-22358]: SiteAccessRules setting doesn't work well in the Symfony Stack

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -835,8 +835,8 @@ MaxParentDepthLimitation=20
 # The following is an example of how to disable content/search
 # and the rss module
 #
-# [SiteAccessRules]
-# Rules[]
+[SiteAccessRules]
+Rules[]
 # # Set access policy to allowed
 # Rules[]=access;enable
 # # Special syntax which means any module
