Support textarea custom attributes in the Online Editor

--- a/extension/ezoe/settings/ezoe_attributes.ini
+++ b/extension/ezoe/settings/ezoe_attributes.ini
@@ -31,6 +31,7 @@
 #Title=Titles are used for help text, they show up when you hover the html control
 ## Optional, lets you specify what html form input element (type) to use, valid:
 ## text (default, supports validation)
+## textarea (supports validation)
 ## int (supports validation)
 ## number (supports validation)
 ## email (supports validation)
@@ -55,6 +56,8 @@
 #Required=true
 ## Opposite of Required, allows input to be empty even if type is for instance int
 #AllowEmpty=true
+## Optional, to specify the number of rows when a textarea is used
+#Rows=3
 ## Optional, for validation when type is int or number (inclusive)
 #Minimum=1
 ## Optional, for validation when type is int or number (inclusive)
