EZP-22204: Documented the 'nossl' setting + fix

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -1423,10 +1423,15 @@ SSLZones=disabled
 # SSLSubtrees[]=/news
 # SSLSubtrees[]=/polls
 SSLSubtrees[]
+
 # Default access mode is plain HTTP.
+#
 # Define a view as 'ssl' to force HTTPS access mode for this view.
 # If a view is defined as 'keep' then access mode is unknown
 # for this view, and the previous access mode is kept.
+#
+# Define a view as 'nossl' to force HTTP for this module. Further
+# SSL redirections will be ignored
 #
 # Examples:
 # ModuleViewAccessMode[shop/add]=ssl
