Fix EZP-22592: Setup wizard should check for php-xsl and php-intl

--- a/settings/setup.ini
+++ b/settings/setup.ini
@@ -78,6 +78,14 @@ Require=all
 Extensions=iconv
 Require=all
 
+[xsl_extension]
+Extension=xsl
+Require=all
+
+[intl_extension]
+Extension=intl
+Require=all
+
 [imagemagick_program]
 unix_Executable=convert
 unix_SearchPaths=/bin;/sbin;/usr/bin;/usr/sbin;/usr/local/bin;/usr/local/sbin
