EZP-22592: Fixed typos in setup.ini

--- a/settings/setup.ini
+++ b/settings/setup.ini
@@ -79,11 +79,11 @@ Extensions=iconv
 Require=all
 
 [xsl_extension]
-Extension=xsl
+Extensions=xsl
 Require=all
 
 [intl_extension]
-Extension=intl
+Extensions=intl
 Require=all
 
 [imagemagick_program]
