EZP-22602: Added icons for classes blog and place_list

--- a/share/icons/crystal-admin/icon.ini
+++ b/share/icons/crystal-admin/icon.ini
@@ -78,6 +78,8 @@ ClassMap[user]=apps/personal.png
 ClassMap[user_group]=apps/kuser.png
 ClassMap[weblog]=mimetypes/document.png
 ClassMap[windows_media]=mimetypes/video.png
+ClassMap[blog]=filesystems/folder_txt.png
+ClassMap[place_list]=filesystems/folder_man.png
 
 [ClassGroupIcons]
 # Default icon if there is no class group match
