Implemented EZP-22754: Make productDatatypeList configurable

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -1305,6 +1305,14 @@ RedirectAfterAddToBasket=basket
 # when an order is completed and confirmed.
 SendOrderEmail=enabled
 
+# since 5.3 it is possible to define a list with the dataypes containing prices
+# This will allow you to define your own price datatypes and work with them
+# in the shop module
+# Setting is commented out by default
+#ProductDatatypeStringList[]
+#ProductDatatypeStringList[]=ezprice
+#ProductDatatypeStringList[]=ezmultiprice
+#ProductDatatypeStringList[]=customprice
 
 [OverrideSettings]
 Cache=enabled
