--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,9 @@
         "zetacomponents/signal-slot": "@dev",
         "zetacomponents/system-information": "@dev"
     },
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*"
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "5.2.x-dev"
