--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,21 @@
         "ext-spl": "*",
         "ext-simplexml": "*",
         "ezsystems/ezpublish-legacy-installer": "*",
+        "ezsystems/ezautosave-ls": "~5.3",
+        "ezsystems/ezdemo-ls-extension": "~5.3",
+        "ezsystems/ezflow-ls-extension": "~5.3",
+        "ezsystems/ezgmaplocation-ls-extension": "~5.3",
+        "ezsystems/ezie-ls": "~5.3",
+        "ezsystems/ezmbpaex-ls": "~5.3",
+        "ezsystems/ezmultiupload-ls": "~5.3",
+        "ezsystems/ezodf-ls": "~5.3",
+        "ezsystems/ezprestapiprovider-ls": "~5.3",
+        "ezsystems/ezscriptmonitor-ls": "~5.3",
+        "ezsystems/ezsi-ls": "~5.3",
+        "ezsystems/ezstarrating-ls-extension": "~5.3",
+        "ezsystems/ezwt-ls-extension": "~5.3",
+        "ezsystems/ezfind-ls": "~5.3|>=2014.05",
+        "ezsystems/eztags-ls": "~1.3",
         "zetacomponents/archive": "dev-master#d0caff8",
         "zetacomponents/authentication": "dev-master#c422670",
         "zetacomponents/authentication-database-tiein": "dev-master#56d1e0a",
