Fix EZP-22894: 5.3-rc7 has development settings enabled
With switch to composer based model we no longer have the option
to swap to many things in builds anymore, and hence we herby
swap the defaults in git to be same as in builds.

--- a/settings/content.ini
+++ b/settings/content.ini
@@ -16,7 +16,7 @@
 # OBSOLETE: A list of designs the site can use
 AvailableSiteDesignList[]
 AvailableSiteDesignList[]=admin
-AvailableSiteDesignList[]=base##!
+#AvailableSiteDesignList[]=base
 
 # Define maximum versions can be managed. Use syntax
 # VersionHistoryClass[class_id]=maximum_nr to specify value for particular
