--- a/settings/image.ini
+++ b/settings/image.ini
@@ -283,7 +283,7 @@ Executable=convert
 # Name of the executable for windows,
 # uncomment ExecutableMac for Mac specific converter and
 # ExecutableUnix for Unix/Linux specific converter
-ExecutableWin32=convertim##!
+#ExecutableWin32=convertim
 # ExecutableMac=convert
 # ExecutableUnix=convert
 # Parameters that must be run before the filenames and filters.
