--- a/settings/template.ini
+++ b/settings/template.ini
@@ -26,8 +26,7 @@ AutoConvertOnSave=enabled
 # Whether warnings from the template engine should be displayed
 # on the page or not.
 # Note: Debug warnings are always shown if debug is on.
-DisplayWarnings=enabled##!
-#!DisplayWarnings=disabled
+DisplayWarnings=disabled
 # User defined parameter.
 # Ex: http://ez.no/developer/(poll_option)/5
 # will store poll_option 5 into the $view_parameters.poll_option in the template
