--- a/settings/site.ini
+++ b/settings/site.ini
@@ -542,6 +542,9 @@ VerifyUserType=email
 # If set to enabled, user password would be send in the registration email
 # This password WON'T be stored in plain text
 PasswordInRegistrationEmail=disabled
+# If set to disabled, the user will not be automatically logged in while registering
+# even if the user is automatically activated
+RegisterAutoLogin=enabled
 # Which content class to use for user creation
 UserClassID=4
 # Which content class to use for user group creation
