--- a/settings/file.ini
+++ b/settings/file.ini
@@ -78,6 +78,7 @@ MountPointPath=
 # - PostgreSQL: eZDFSFileHandlerPostgresqlBackend
 # - Oracle: eZDFSFileHandlerOracleBackend (requires the ezoracle extension)
 DBBackend=eZDFSFileHandlerMySQLiBackend
+DFSBackend=eZDFSFileHandlerDFSBackend
 DBHost=dbhost
 DBPort=3306
 DBSocket=
@@ -115,3 +116,4 @@ ClusterEvents=disabled
 # Class to use as cluster events listener
 # This class must implement eZClusterEventListener interface
 Listener=
+
