Implemented: EZP-23095: (Re?)Introduce a way to skip the confirmation mail sent upon user registration

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -542,6 +542,9 @@ VerifyUserType=email
 # If set to enabled, user password would be send in the registration email
 # This password WON'T be stored in plain text
 PasswordInRegistrationEmail=disabled
+# If set to disabled, the registration confirmation mail won't be send to the user
+# that created his account
+EmailRegistrationInfo=enabled
 # If set to disabled, the user will not be automatically logged in while registering
 # even if the user is automatically activated
 RegisterAutoLogin=enabled
