Fix EZP-23107: Custom headers break if header value contains semicolons

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -1482,6 +1482,7 @@ HeaderList[]=Expires
 # Default Cache-Control header
 # HTTP Headers are specified using the following format :
 # <HTTP header>[<eZ Publish path|module{/view}>]=<value>{;<depth>{;<level>}}
+# Note: to use a semicolon in the value, you need to escape it with a backslash.
 #
 # Example :
 # # Set Pragma HTTP header to no-cache for whole site, except /news, and 2 levels below news.
