Fix EZP-22915: allow a list of extra directories to be deleted by eZDir::recursiveDelete()

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -1011,6 +1011,7 @@ LogDir=log
 # By default, it is only possible to delete from inside eZ Publish root directory.
 # Directories listed will be added as authorized directory prefixes.
 # Values must be absolute paths.
+# DEPRECATED in favor of config.ini/EXTRA_ALLOWED_DELETION_DIRS
 AllowedDeletionDirs[]
 #AllowedDeletionDirs[]=/var/share/somedir
 
