Fix EZP-23312: Async pub: old processes are filling up the database Replaced command line arguments by ini configuration.

--- a/settings/content.ini
+++ b/settings/content.ini
@@ -511,6 +511,14 @@ AsynchronousPublishingQueueReader=ezpContentPublishingQueue
 # default: 1
 AsynchronousPollingInterval=1
 
+# How frequent the daemon cleans the queue (sleep in seconds)
+# default: 43200 (12 hours)
+AsynchronousCleanupInterval=43200
+
+# How old processes need to be in order to be cleaned (in seconds)
+# default: 604800 (a week)
+AsynchronousCleanupAgeLimit=604800
+
 [TestingSettings]
 # Enable or disable multivariate testing feature
 MultivariateTesting=disabled
