--- a/composer.json
+++ b/composer.json
@@ -39,25 +39,25 @@
         "ezsystems/ezwt-ls-extension": "~5.3",
         "ezsystems/ezfind-ls": "~5.3|>=2014.05",
         "ezsystems/eztags-ls": "~1.3",
-        "zetacomponents/archive": "dev-master#d0caff8",
-        "zetacomponents/authentication": "dev-master#c422670",
-        "zetacomponents/authentication-database-tiein": "dev-master#56d1e0a",
-        "zetacomponents/cache": "dev-master#34fa794",
-        "zetacomponents/configuration": "dev-master#10ae09f",
-        "zetacomponents/console-tools": "dev-master#90156ab",
-        "zetacomponents/database": "dev-master#0e8ddef",
-        "zetacomponents/debug": "dev-master#0d8cc8f",
-        "zetacomponents/event-log": "dev-master#eee54a1",
-        "zetacomponents/feed": "dev-master#e0190e9",
-        "zetacomponents/image-conversion": "dev-master#36f34c8",
-        "zetacomponents/mail": "1.8.*@beta",
-        "zetacomponents/mvc-tools": "dev-master#6f2c1eb",
-        "zetacomponents/mvc-authentication-tiein": "dev-master#9bae3a7",
-        "zetacomponents/persistent-object": "dev-master#a4c8b95",
-        "zetacomponents/php-generator": "dev-master#b51935e",
-        "zetacomponents/signal-slot": "dev-master#74deb41",
-        "zetacomponents/system-information": "dev-master#6743362",
-        "zetacomponents/webdav": "1.1.*"
+        "zetacomponents/archive": "~1.5",
+        "zetacomponents/authentication": "~1.4",
+        "zetacomponents/authentication-database-tiein": "~1.2",
+        "zetacomponents/cache": "~1.6",
+        "zetacomponents/configuration": "~1.4",
+        "zetacomponents/console-tools": "~1.7",
+        "zetacomponents/database": "~1.5",
+        "zetacomponents/debug": "~1.3",
+        "zetacomponents/event-log": "~1.5",
+        "zetacomponents/feed": "~1.4",
+        "zetacomponents/image-conversion": "~1.4",
+        "zetacomponents/mail": "~1.8",
+        "zetacomponents/mvc-tools": "~1.2",
+        "zetacomponents/mvc-authentication-tiein": "~1.1",
+        "zetacomponents/persistent-object": "~1.8",
+        "zetacomponents/php-generator": "~1.1",
+        "zetacomponents/signal-slot": "~1.2",
+        "zetacomponents/system-information": "~1.1",
+        "zetacomponents/webdav": "~1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
