--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ php:
   - 5.3
   - 5.4
   - 5.5
+  - 5.6
 
 branches:
   only:
@@ -28,6 +29,8 @@ matrix:
       env: DB="postgresql" DB_USER="postgres"
     - php: 5.5
       env: DB="mysql" DB_USER="root"
+    - php: 5.6
+      env: DB="postgresql" DB_USER="postgres"
 
 before_script:
   - if [ $DB == "mysql" ]; then mysql -e "CREATE DATABASE IF NOT EXISTS $DB_NAME;" -u$DB_USER ; fi
