--- a/composer.json
+++ b/composer.json
@@ -24,20 +24,20 @@
         "ext-spl": "*",
         "ext-simplexml": "*",
         "ezsystems/ezpublish-legacy-installer": "*",
-        "ezsystems/ezautosave-ls": "~5.3",
-        "ezsystems/ezdemo-ls-extension": "~5.3",
-        "ezsystems/ezflow-ls-extension": "~5.3",
-        "ezsystems/ezgmaplocation-ls-extension": "~5.3",
-        "ezsystems/ezie-ls": "~5.3",
-        "ezsystems/ezmbpaex-ls": "~5.3",
-        "ezsystems/ezmultiupload-ls": "~5.3",
-        "ezsystems/ezodf-ls": "~5.3",
-        "ezsystems/ezprestapiprovider-ls": "~5.3",
-        "ezsystems/ezscriptmonitor-ls": "~5.3",
-        "ezsystems/ezsi-ls": "~5.3",
-        "ezsystems/ezstarrating-ls-extension": "~5.3",
-        "ezsystems/ezwt-ls-extension": "~5.3",
-        "ezsystems/ezfind-ls": "~5.3|>=2014.05",
+        "ezsystems/ezautosave-ls": "dev-master",
+        "ezsystems/ezdemo-ls-extension": "dev-master",
+        "ezsystems/ezflow-ls-extension": "dev-master",
+        "ezsystems/ezgmaplocation-ls-extension": "dev-master",
+        "ezsystems/ezie-ls": "dev-master",
+        "ezsystems/ezmbpaex-ls": "dev-master",
+        "ezsystems/ezmultiupload-ls": "dev-master",
+        "ezsystems/ezodf-ls": "dev-master",
+        "ezsystems/ezprestapiprovider-ls": "dev-master",
+        "ezsystems/ezscriptmonitor-ls": "dev-master",
+        "ezsystems/ezsi-ls": "dev-master",
+        "ezsystems/ezstarrating-ls-extension": "dev-master",
+        "ezsystems/ezwt-ls-extension": "dev-master",
+        "ezsystems/ezfind-ls": "dev-master",
         "ezsystems/eztags-ls": "~1.3",
         "zetacomponents/archive": "~1.5",
         "zetacomponents/authentication": "~1.4",
