--- a/composer.json.dist
+++ b/composer.json.dist
@@ -9,11 +9,7 @@
         "ext-curl": "Curl provides better support for interacting with other servers, like downloading packages over SSL",
         "ext-gd": "Unless you have ImageMagic installed GD is required for eZ Publish to be able to manipulate images",
         "ext-mysqli": "Mysqli is the default database handler used by eZ Publish",
-        "ext-pcntl": "If you plan to take advantage of eZ Publish Async publishing feature, then pcntl extension is required",
-        "ezsystems/ezsi-ls": "ezsi would allow you to use Edge/Server Side Includes of blocks in templates",
-        "ezsystems/ezscriptmonitor-ls": "ezscriptmonitor makes it possible to better deal with long running bulk operations within eZ Publish",
-        "ezsystems/ezfind-ls": "ezfind is a Solr based advance search engine for eZ Publish with a lot more features then the built in search",
-        "ezsystems/eztags-ls": "eztags is a full tagging/taxonomy solution for eZ Publish replacing the simpler builtin ezkeywords datatype"
+        "ext-pcntl": "If you plan to take advantage of eZ Publish Async publishing feature, then pcntl extension is required"
     },
     "require": {
         "php": ">=5.3.3",
@@ -37,8 +33,12 @@
         "ezsystems/ezmultiupload-ls": "~5.3",
         "ezsystems/ezodf-ls": "~5.3",
         "ezsystems/ezprestapiprovider-ls": "~5.3",
+        "ezsystems/ezscriptmonitor-ls": "~5.3",
+        "ezsystems/ezsi-ls": "~5.3",
         "ezsystems/ezstarrating-ls-extension": "~5.3",
         "ezsystems/ezwt-ls-extension": "~5.3",
+        "ezsystems/ezfind-ls": "~5.3|>=2014.05",
+        "ezsystems/eztags-ls": "~1.3",
         "zetacomponents/archive": "~1.5",
         "zetacomponents/authentication": "~1.4",
         "zetacomponents/authentication-database-tiein": "~1.2",
