--- a/settings/package.ini
+++ b/settings/package.ini
@@ -15,7 +15,7 @@ RepositoryDirectory=packages
 # If you want to use the old packages which were available in
 # versions prior to 3.9 use the following URL instead:
 # http://packages.ez.no/ezpublish/3.9legacypackages
-RemotePackagesIndexURL=
+RemotePackagesIndexURL=http://packages.ez.no/ezpublish/5.4/5.4.0
 # If RemotePackagesIndexURL is empty, the RemotePackagesIndexURLBase setting
 # will be used, appended with the eZ Publish version numbers, like
 # RemotePackagesIndexURLBase/x.y/x.y.zalpha1
