Added new files and folder to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,18 @@
 /bin/win32
 /vendor
 /composer.lock
-
+tests/phpunit.xml
+config.cluster.php
+config.php
+extension/*
+!extension/ezoe/*
+!extension/ezformtoken/*
+!extension/ezjscore/*
+settings/override/*
+settings/siteaccess/
+!settings/siteaccess/base/*
+!settings/siteaccess/mysite/*
+!settings/siteaccess/plain/*
+support/ezlupdate-qt4.5/ezlupdate/Makefile
+support/ezlupdate-qt4.5/ezlupdate/moc/
+support/ezlupdate-qt4.5/ezlupdate/obj/
