Forcing translations when the locale is eng-GB
Adding a new setting to the regional settings in the site.ini
to allow the user to force eZ Publish to use translations
when the locale is set to eng-GB

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -905,6 +905,9 @@ ContentObjectLocale=eng-GB
 # If enabled, ShowUntranslatedObjects will force showing the objects
 # existing in other languages than those specified in SiteLanguageList
 ShowUntranslatedObjects=disabled
+# This setting allow us to translate eng-GB when the default locale is different
+# that eng-GB
+ForceEngGBTranslation=disabled
 # Prioritized list of languages. Only objects existing in these
 # languages will be shown (unless ShowUntranslatedObjects is enabled).
 # If an object exists in more languages, that one which is first in
