EZP-23725: Add SiteNode support and recommend over RootNode for multisite setup

--- a/settings/content.ini
+++ b/settings/content.ini
@@ -240,7 +240,8 @@ AvailableClasses[]
 CustomAttributes[]
 
 [NodeSettings]
-# The node ID of the normal content tree
+# The node ID of the normal content tree (the content root of the respitory)
+# Note: Instead use SiteNode for defining root of your front end site!
 RootNode=2
 # The node ID of the user tree
 UserRootNode=5
@@ -250,6 +251,9 @@ MediaRootNode=43
 SetupRootNode=48
 # The node ID for the design tree
 DesignRootNode=58
+# The content root of your front end site (since 5.3.5/5.4.2)
+# Used out of the box if defined by ezpage (ezwebin, ezflow and ezdemo)
+#SiteNode=2
 
 [ClassSettings]
 # Number of seconds to wait before removing class edit lock.
