Added ini setting default disabled.

--- a/settings/template.ini
+++ b/settings/template.ini
@@ -72,6 +72,10 @@ Methods[]=ftps
 Methods[]=webdav
 Methods[]=webdavs
 
+# Add support for text which is started from www. without protocol.
+# For example change text "www.ez.no" to link tags.
+ChangeUrlWithoutProtocol=disabled
+
 # Configuration for the 'simpletags' template operator
 [SimpleTagsOperator]
 # A list of extension which should be examined for
