--- a/settings/template.ini
+++ b/settings/template.ini
@@ -74,7 +74,10 @@ Methods[]=webdavs
 
 # Add support for text which is started from www. without protocol.
 # For example change text "www.ez.no" to link tags.
-ChangeUrlWithoutProtocol=disabled
+LinkWwwUrlsWithoutProtocol=disabled
+
+HideProtocols[]
+#HideProtocols[]=http
 
 # Configuration for the 'simpletags' template operator
 [SimpleTagsOperator]
