Fix EZP-24115: UrlAlias/path_ident_string issues after editing a custom RootNode.

--- a/settings/content.ini
+++ b/settings/content.ini
@@ -240,8 +240,10 @@ AvailableClasses[]
 CustomAttributes[]
 
 [NodeSettings]
-# The node ID of the normal content tree
+# The node ID for the site's content
 RootNode=2
+# The node ID of the normal content tree
+ContentTreeRootNode=2
 # The node ID of the user tree
 UserRootNode=5
 # The node ID for the media tree
