Fix EZP-24233: undisclosed-recipients:; breaks sendmail

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -1264,6 +1264,9 @@ HeaderLineEnding=auto
 # SendmailOptions[]=-r
 # SendmailOptions[]=muchspam@ez.no
 SendmailOptions[]
+# Allows inserting undisclosed-recipients into the "TO:" of email headers.
+# As this is not a standard, some MTA might reject it, in that case you can set it to "disabled"
+SendmailInsertUndisclosedRecipient=enabled
 # If enabled, all emails will be sent to DebugReceiverEmail instead of to their original recipient(s)
 DebugSending=disabled
 # Receiver email address to use when DebugSending is enabled
