[Travis] Make sure master is not tested twice

--- a/shippable.yml
+++ b/shippable.yml
@@ -9,9 +9,9 @@ php:
 
 branches:
   only:
-    - master
-#    - 5.4
-#    - stable-5.3
+#    - master
+    - 5.4
+    - stable-5.3
 
 env:
   global:
