Updating setting description in the ini file

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -905,8 +905,10 @@ ContentObjectLocale=eng-GB
 # If enabled, ShowUntranslatedObjects will force showing the objects
 # existing in other languages than those specified in SiteLanguageList
 ShowUntranslatedObjects=disabled
-# This setting allow us to translate eng-GB when the default locale is different
-# that eng-GB
+# eZ Publish assumes that eng-GB is the base locale. When the default locale is
+# something other than eng-GB, setting this to "enabled" ensures that eZ Publish
+# will look for an eng-GB translation file.
+# The eng-GB translation is usually always available.
 ForceEngGBTranslation=disabled
 # Prioritized list of languages. Only objects existing in these
 # languages will be shown (unless ShowUntranslatedObjects is enabled).
