--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name":        "ezsystems/ezpublish-legacy",
-    "description": "eZ Publish LegacyStack (4.x)",
+    "name":        "mirum/ezsystems/ezpublish-legacy",
+    "description": "eZ Publish LegacyStack (4.x) - changed dependency for eztags to v2",
     "homepage":    "http://share.ez.no",
     "license":     "GPL-2.0",
     "type":        "ezpublish-legacy",
@@ -38,7 +38,7 @@
         "ezsystems/ezstarrating-ls-extension": "~5.3",
         "ezsystems/ezwt-ls-extension": "~5.3",
         "ezsystems/ezfind-ls": "~5.3|>=2014.11",
-        "ezsystems/eztags-ls": "~1.3",
+        "ezsystems/eztags-ls": "~2.0",
         "zetacomponents/archive": "~1.5",
         "zetacomponents/authentication": "~1.4",
         "zetacomponents/authentication-database-tiein": "~1.2",
