EZP-20547: Allow specifying max. connect timeout for link check

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -1555,3 +1555,7 @@ DynamicTemplateMode=disabled
 ProxyServer=
 User=
 Password=
+
+[LinkCheck]
+# Used by the linkcheck cronjob, ConnectTimeout specifies the limit (in seconds) to wait for a valid connection.
+ConnectTimeout=3
