EZP-24744: Increase password security
(cherry picked from commit 7d5bd88cb7ceba3e3ec1c349786e1022d375d38f)

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -562,10 +562,12 @@ UserCreatorID=14
 # md5_user generates password hash from user and password.
 # md5_site generates password hash from site, user and password
 # plaintext does not generate a hash but has the password as it is, this is not
-# recommended since it is a huge security risc.
+# recommended since it is a huge security risk.
+# bcrypt generates hash from password only
+# php_default uses whichever method PHP deems appropriate (currently bcrypt, as of PHP 5.5)
 # note: password hashes generated with md5_site will not work after
 #       changing the site name.
-HashType=md5_user
+HashType=php_default
 # What SiteName should be used when hashing the user_password
 # with the 'md5_site' HashType
 SiteName=ez.no
