Control eZExpiryHandler::reset on change site access via site.ini setting

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -9,6 +9,8 @@
 #       in non-virtualhost modes (the .php file may already be present
 #       and can be used for this purpose).
 
+[ExpiryHandler]
+ExpiryFilePerSiteAccess=disabled
 
 [Cache]
 # Array with cache items to extend ezcache
