eZ template now support post processors
These are functions which are called on the rendered text which can
perform extra text filtering before the text is return to the caller.
The default will trim the root whitespace and insert debug information
(if enabled), extra processor can be added by setting
TemplateSettings/PostProcessors.

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -1028,6 +1028,12 @@ AutoloadPathList[]=kernel/private/eztemplate/
 # Only specify the extension name, not the path.
 # The extension must contain a subdirectory called autoloads.
 ExtensionAutoloadPath[]
+# List of post processors for the rendered template
+# This will be called with the resource data and text and must return the new text.
+# Static functions can be called by using :: between the class name and function.
+PostProcessors[]
+PostProcessors[]=eZTemplate::trimRootWhitespace
+PostProcessors[]=eZTemplate::insertDebugInfo
 # Enabled to see which template files are loaded or disabled to supress debug
 # Warning: Will add debug xhtml comments to your source code, including mails!
 # Note: No debug on templates starting with <!DOCTYPE to not trigger quirks mode!
