Added new setting ControlFilePermissions
The setting is set to true by default to be compatible but can be
changed in each project.

--- a/settings/site.ini
+++ b/settings/site.ini
@@ -1013,6 +1013,9 @@ LogDir=log
 # Values must be absolute paths.
 AllowedDeletionDirs[]
 #AllowedDeletionDirs[]=/var/share/somedir
+# If set to false all changes to file permissions are disabled
+# This is useful where sticky group permissions are used.
+ControlFilePermissions=true
 
 
 [TemplateSettings]
