Enable audit log by default

--- a/settings/audit.ini
+++ b/settings/audit.ini
@@ -14,7 +14,7 @@
 # Since 4.7, LogDir is relative to var/{site.ini/[FileSettings]/VarDir} setting
 LogDir=log/audit
 # If 'enabled' the possibility will be enabled.
-Audit=disabled
+Audit=enabled
 
 # Audit file names setting.
 # The key of AuditFileNames[] is the name of audit and value is file name.
