--- a/settings/site.ini
+++ b/settings/site.ini
@@ -1469,6 +1469,9 @@ ModuleViewAccessMode[layout/*]=keep
 
 
 [HTTPHeaderSettings]
+# Enable/disable the generation of the 'Content-Length' response header
+SetContentLengthHeader=disabled
+
 # Enable/disable custom HTTP header data.
 CustomHeader=disabled
 
