Add location addition, removal, and change of main location to the audit log (#37)
Test results as expected

--- a/settings/audit.ini
+++ b/settings/audit.ini
@@ -53,3 +53,11 @@ AuditFileNames[state-assign]=state_assign.log
 # Who deleted which order in shop (user / order id)
 AuditFileNames[order-delete]=order_delete.log
 
+# Who assigned new locations to a node
+AuditFileNames[location-assign]=location_assign.log
+
+# Who removed a location of a node
+AuditFileNames[location-remove]=location_remove.log
+
+# Who updated the main node
+AuditFileNames[main-node-update]=location_main_update.log
