--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,3 @@
-/var/autoload/
-/var/cache/
-/var/*/cache/
-/var/*_site/
-/var/log/
-/var/*/log/
-/var/storage/
-/var/test*
 *.DS_Store
 /.project
 /.idea/
@@ -14,4 +6,6 @@
 /bin/win32
 /vendor
 /composer.lock
-
+/var/*
+# Except for any .gitkeep file in the tree. This is added only to keep directories in the repository.
+!.gitkeep
