[Composer] Add branch alias in order to be able to resolve dependencies on legacy bridge pre release

--- a/composer.json
+++ b/composer.json
@@ -64,5 +64,10 @@
     },
     "conflict": {
         "ezsystems/ezpublish-kernel": "<6.11@dev || >=2014.11"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2017.08.x-dev"
+        }
     }
 }
