Font rewrite rule (#66)
* See #463 : added font rewrite rule

* See #463 : Added font rewrite rule to .conf file.  Added / modified .conf file for legacy newstack hybrid.  Moved files to apache2 folder.

* Moving the almost empty htaccess file to the apache2 directory

--- a/doc/apache2/legacy.conf
+++ b/doc/apache2/legacy.conf
@@ -6,7 +6,7 @@ NameVirtualHost [IP_ADDRESS]
     ServerAlias [SERVER_ALIAS]
 
     <Directory [PATH_TO_EZPUBLISH]>
-        Options FollowSymLinks 
+        Options FollowSymLinks
         AllowOverride None
     </Directory>
 
@@ -26,13 +26,13 @@ NameVirtualHost [IP_ADDRESS]
         RewriteEngine On
         # REST API
         RewriteRule ^/api/ /index_rest.php [L]
-        
+
         RewriteRule ^/([^/]+/)?content/treemenu.* /index_treemenu.php [L]
         RewriteRule ^/var/([^/]+/)?storage/images(-versioned)?/.* - [L]
         RewriteRule ^/var/([^/]+/)?cache/(texttoimage|public)/.* - [L]
         RewriteRule ^/design/[^/]+/(stylesheets|images|javascript|fonts)/.* - [L]
         RewriteRule ^/share/icons/.* - [L]
-        RewriteRule ^/extension/[^/]+/design/[^/]+/(stylesheets|flash|images|lib|javascripts?)/.* - [L]
+        RewriteRule ^/extension/[^/]+/design/[^/]+/(stylesheets|flash|images|lib|fonts|javascripts?)/.* - [L]
         RewriteRule ^/packages/styles/.+/(stylesheets|images|javascript)/[^/]+/.* - [L]
         RewriteRule ^/packages/styles/.+/thumbnail/.* - [L]
         RewriteRule ^/var/storage/packages/.* - [L]
@@ -70,7 +70,7 @@ NameVirtualHost [IP_ADDRESS]
             ExpiresDefault "now plus 10 years"
         </LocationMatch>
 
-        <LocationMatch "^/extension/[^/]+/design/[^/]+/(stylesheets|images|javascripts?|flash)/.*">
+        <LocationMatch "^/extension/[^/]+/design/[^/]+/(stylesheets|images|fonts|javascripts?|flash)/.*">
         # A good optimization if you normally don't change your design often
             ExpiresActive on
             ExpiresDefault "now plus 5 days"
