[Travis] Setup PHP7 testing on travis, bump requriment to PHP 5.5 (#73)

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "ezsystems/eztags-ls": "eztags is a full tagging/taxonomy solution for eZ Publish replacing the simpler builtin ezkeywords datatype"
     },
     "require": {
-        "php": ">=5.3.3",
+        "php": "~5.5|~7.0",
         "ext-dom": "*",
         "ext-libxml": "*",
         "ext-mbstring": "*",
